2005-12-09  Matthias Wimmer  <m@tthias.net>

    * xdb_file/xdbfiletool.c: more options handled by libpopt

2005-12-08  Matthias Wimmer  <m@tthias.net>

    * jabberd/config.c: Generate warning: diff namespaces when include
    * jabberd/jabberd.c: use libpopt for commandline parsing
    * xdb_file/xdbfiletool.c: start using libpopt for commandline parsing
    * xdb_file/xdb_file.c: same

2005-12-06  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: defined new namespaces
    * jsm/modules/mod_presence.c: namespace fix
    * pthsock/client.c: using the ns aware api of xmlnode
    * xdb_sql/xdb_sql.c: using ns aware api of xmlnode
    * dialback/dialback_in.c: bugfix for pre-XMPP streams handling

2005-12-05  Matthias Wimmer  <m@tthias.net>

    * jabberd/jabberd.h: passing xdb ns argument as const char*
    * jabberd/xdb.c: same
    * jabberd/lib/jabberdlib.h: NSCHECK using ns aware xmlnode API,
    	defining new constants
    * jsm/jsm.h: jsm uses the ns aware api of xmlnode
    * jsm/authreg.c: same
    * jsm/deliver.c: same
    * jsm/jsm.c: same
    * jsm/offline.c: same
    * jsm/sessions.c: same
    * jsm/server.c: same
    * jsm/util.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/modules/mod_agents.c: same
    * jsm/modules/mod_announce.c: same
    * jsm/modules/mod_auth_crypt.c: same
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_echo.c: same
    * jsm/modules/mod_example.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_log.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_time.c: same
    * jsm/modules/mod_useridpolicy.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_version.c: same
    * jsm/modules/mod_xml.c: same
